import { describe, it, expect } from 'vitest'
import { mount } from '@vue/test-utils'
import Basic from '../demo/basic.vue'
import Size from '../demo/size.vue'
import Vertical from '../demo/vertical.vue'
import Compact from '../demo/compact.vue'
import Wrap from '../demo/wrap.vue'

const demos = { Basic, Size, Vertical, Compact, Wrap }

describe('Space demos', () => {
  Object.entries(demos).forEach(([name, component]) => {
    it(`demo: ${name}`, () => {
      const wrapper = mount(component, { global: { stubs: { Wave: true } } })
      expect(wrapper.html()).toMatchSnapshot()
    })
  })
})
